# DeepXpress

./: .gitignore  AGENTS.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
api/: app.py
configs/: config.py  config.yaml
deployment/: Dockerfile  docker-compose.yml
inference/: __init__.py  onnx_predictor.py
models/: download_pretrained.py
scripts/: build.py
tests/: test_api.py  test_config.py  test_onnx_predictor.py
ui/: __init__.py  streamlit_app.py  webcam.py
